<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_aqua"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_bnav_aqua" />

    <item
        android:id="@+id/navigation_param"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_bnav_param" />

    <item
        android:id="@+id/navigation_fauna"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_bnav_fauna" />

</menu>
